# QDesignOptimizer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  3.9.0  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  authors.html  changelog.html  contributing.html  development.html  environment.yml  examples.html  genindex.html  index.html  installation.html  objects.inv  optimizer.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  search.html  searchindex.js  tutorials.html  userguide.html  videos.html
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  development.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  optimizer.doctree  quickstart.doctree  tutorials.doctree  userguide.doctree  videos.doctree
.doctrees/api-reference/: modules.doctree  qdesignoptimizer.anmod_optimizer.doctree  qdesignoptimizer.design_analysis.doctree  qdesignoptimizer.design_analysis_types.doctree  qdesignoptimizer.doctree  qdesignoptimizer.estimation.classical_model_decay_into_charge_line.doctree  qdesignoptimizer.estimation.doctree  qdesignoptimizer.estimation.purcell_limit.doctree  qdesignoptimizer.logger.doctree  qdesignoptimizer.sim_capacitance_matrix.doctree  qdesignoptimizer.sim_plot_progress.doctree  qdesignoptimizer.utils.chip_generation.doctree  qdesignoptimizer.utils.doctree  qdesignoptimizer.utils.names_design_variables.doctree  qdesignoptimizer.utils.names_parameters.doctree  qdesignoptimizer.utils.names_qiskit_components.doctree  qdesignoptimizer.utils.optimization_targets.doctree  qdesignoptimizer.utils.plotting.doctree  qdesignoptimizer.utils.utils.doctree
.github/: RELEASING.md  pull_request_template.md
.github/workflows/: analysis.yml  deploy_docs.yml  publish_release.yml  publish_test_release.yml
_modules/: index.html
_modules/qdesignoptimizer/: anmod_optimizer.html  design_analysis.html  design_analysis_types.html  logger.html  sim_capacitance_matrix.html  sim_plot_progress.html
_projects/examples_coupled_transmon_chip/: main_capacitance_target_resonator.html  main_charge_line_decay_single_qubit.html  main_eigenmode_single_qubit_resonator.html  main_eigenmode_single_qubit_resonator.ipynb  main_eigenmode_single_qubit_resonator_pratio.html  main_eigenmode_single_qubit_resonator_pratio.ipynb  main_eigenmode_two_qubit_resonator.html  main_kappa_target_resonator.html  main_kappa_target_resonator.ipynb  main_robustness_of_single_qubit.html
_projects/examples_coupled_transmons_tunable_coupler_chip/: main_eigenmode_two_qubit_resonator.html
_sources/: authors.rst.txt  index.rst.txt  optimizer.rst.txt  quickstart.rst.txt  userguide.rst.txt  videos.rst.txt
_sources/api-reference/: modules.rst.txt  qdesignoptimizer.estimation.rst.txt  qdesignoptimizer.logger.rst.txt  qdesignoptimizer.rst.txt  qdesignoptimizer.sim_capacitance_matrix.rst.txt  qdesignoptimizer.utils.names_design_variables.rst.txt  qdesignoptimizer.utils.names_parameters.rst.txt  qdesignoptimizer.utils.rst.txt  qdesignoptimizer.utils.utils.rst.txt
_tutorials/examples_coupled_transmon_chip/: main_capacitance_target_resonator.html  main_capacitance_target_resonator.ipynb  main_charge_line_decay_single_qubit.html  main_charge_line_decay_single_qubit.ipynb  main_eigenmode_single_qubit_resonator.html  main_eigenmode_single_qubit_resonator.ipynb  main_eigenmode_single_qubit_resonator_exponent_study.html  main_eigenmode_single_qubit_resonator_pratio.html  main_eigenmode_two_qubit_resonator.html  main_kappa_target_resonator.html  main_kappa_target_resonator.ipynb
_tutorials/examples_coupled_transmons_tunable_coupler_chip/: main_eigenmode_two_qubit_resonator.html  main_eigenmode_two_qubit_resonator.ipynb  main_eigenmode_two_qubit_resonator_model_inaccuracy.html  main_eigenmode_two_qubit_resonator_model_inaccuracy_qb_res.html  main_eigenmode_two_qubit_resonator_partitioned.html
api-reference/: modules.html  qdesignoptimizer.anmod_optimizer.html  qdesignoptimizer.design_analysis.html  qdesignoptimizer.design_analysis_types.html  qdesignoptimizer.estimation.classical_model_decay_into_charge_line.html  qdesignoptimizer.estimation.html  qdesignoptimizer.estimation.purcell_limit.html  qdesignoptimizer.html  qdesignoptimizer.logger.html  qdesignoptimizer.sim_capacitance_matrix.html  qdesignoptimizer.sim_plot_progress.html  qdesignoptimizer.utils.chip_generation.html  qdesignoptimizer.utils.html  qdesignoptimizer.utils.names_design_variables.html  qdesignoptimizer.utils.names_parameters.html  qdesignoptimizer.utils.names_qiskit_components.html  qdesignoptimizer.utils.optimization_targets.html  qdesignoptimizer.utils.plotting.html  qdesignoptimizer.utils.utils.html
designlib_temp/: qt_charge_line_open_to_ground.py  qt_component.py  qt_coupled_line_tee.py  qt_flux_line_double.py  qt_launchpad.py  qt_route_coupler.py  transmon_simple_tee_202Q.py
docs/source/: authors.rst  concept.rst  conf.py  contributing.rst  development.rst  examples.rst  index.rst  installation.rst  optimizer.rst  quickstart.rst  single_qubit.rst  tutorials.rst  two_qubit.rst  userguide.rst
optimizer/: design_analysis.py  design_analysis_types.py  sim_capacitance_matrix.py  sim_plot_progress.py
projects/anmod_scalability/: main.py  plot_convergence.py  scaled_system_definition.py
projects/example_clusters_anmod_scaliability/: check_convergence.py  main.py  plot_convergence.py  scaled_system_definition.py
projects/example_coupled_transmon_chip/: analysis_functionality.py  analysis_functionality_for_plots.ipynb  analysis_publication.ipynb  design.py  design_constants.py  design_variable_names.py  design_variables.json  main.ipynb  main_capacitance_target_resonator.ipynb  main_charge_line_decay_single_qubit.ipynb  main_compareMesh.ipynb  main_eigenmode_single_qubit_resonator.ipynb  main_eigenmode_two_qubit_resonator.ipynb  main_kappa_capacitance.ipynb  main_robustness of single qubit example.ipynb  names.py  (+9 more)
publication/: README.md
tests/: test_integration_optimize.py  test_sim_capacitance_matrix.py  test_sim_plot_progress.py
tutorials/: README_TUTORIALS.md
(+268 files in other folders)
