[project]
name = "qdesignoptimizer"
version = "0.0.1"
description = "Optimizer for superconducting quantum chip designs"
authors = [{name="202Q-lab"}, {name="Axel Eriksson"}, {name="Lukas Splitthoff"}]
license = {text = "Apache License 2.0" }
readme = "README.md"
repository = "https://github.com/202Q-lab/QDesignOptimizer"
keywords = ["Quantum"]
classifiers = [  "Programming Language :: Python :: 3"]

requires-python = ">=3.10,<3.11"

dependencies = [
  "addict==2.4.0",
  "descartes==1.1.0",
  "gdspy==1.6.12",
  "geopandas==0.12.2",
  "ipython==8.10.0",
  "matplotlib==3.7.0",
  "numpy>1.24.2",
  "pandas==1.5.3",
  "pint==0.20.1",
  "pyEPR-quantum==0.9.*",
  "pygments==2.14.0",
  "pyside2==5.15.2.1",
  "qdarkstyle==3.1",
  "qutip==4.7.1",
  "scipy==1.10.0",
  "shapely==2.0.1",
  "scqubits==3.1.0",
  "gmsh==4.11.1",
  "pyyaml==6.0",
  "cython<3.0.0",
  "ipykernel>0.*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.group.analysis]
optional = true

[project.group.analysis.dependencies]
pylint = ">=2.16.0"
pylint-exit = "^1.2.0"
pytest = ">=7.2.2"
pytest-cov = ">=4.1.0"
mypy = "^1.7.1"
pandas-stubs = "*"
pre-commit = ">=4.0.1"

[project.group.docs]
optional = true

[project.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"
sphinx-copybutton = "*"
sphinx-last-updated-by-git = "*"
sphinx-mdinclude="*"
ipykernel = "*"
ipython = "*"

[[tool.mypy.overrides]]
module=["qiskit_metal.*", "matplotlib.*", "pyEPR.*", "pyaedt.*"]
ignore_missing_imports = true
