[project]
name = "qdesignoptimizer"
version = "0.0.2"
description = "Optimizer for superconducting quantum chip designs"
authors = [
  { name = "202Q-lab" },
  { name = "Axel Eriksson" },
  { name = "Lukas Splitthoff" },
]
license = "Apache License 2.0"
readme = "README.md"
keywords = ["Quantum"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10,<3.13"
dependencies = [
  # Core scientific computing (directly used by QDO)
  "numpy>=1.24.2,<2",              # Used by QDO, matches quantum-metal >=1.24.2,<2
  "scipy>=1.10.0",                 # Used by QDO, matches quantum-metal >=1.10.0
  "pandas>=2.1.1",                 # Used by QDO, matches quantum-metal >=2.1.1
  "matplotlib>=3.7.0",             # Used by QDO, matches quantum-metal >=3.7.0

  # Quantum/HFSS tools (directly used by QDO)
  "pyEPR-quantum>=0.9.0",          # Used by QDO, matches quantum-metal >=0.9.0
  "pyaedt>=0.21,<0.24",            # Used by QDO, matches quantum-metal >=0.21,<0.24

  # quantum-metal dependencies (needed because we install with --no-deps)
  "addict>=2.4.0",                 # quantum-metal requirement
  "gdstk>=0.9",                    # quantum-metal uses gdstk (not gdspy)
  "geopandas>=1.0",                # quantum-metal requirement
  "pint>=0.21.0",                  # quantum-metal requirement (note: 0.21, not 0.20)
  "pygments>=2.14.0",              # quantum-metal requirement
  "pyside6>=6.8",                  # quantum-metal GUI requirement
  "qdarkstyle>=3.1",               # quantum-metal GUI theming
  "qutip>=5.0.0",                  # quantum-metal quantum simulation
  "shapely>=2.0.1",                # quantum-metal geometry
  "scqubits>=4.1.0",               # quantum-metal superconducting qubits
  "gmsh>=4.11.1",                  # quantum-metal meshing
  "pyyaml>=6.0",                   # quantum-metal configuration

  # Jupyter support
  "ipython>=8.10.0",
  "ipykernel",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"
pylint-exit = "^1.2.0"
pytest = ">=7.2.2"
pytest-cov = ">=4.1.0"
mypy = "^1.7.1"
pandas-stubs = "*"
pre-commit = ">=4.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"
sphinx-copybutton = "*"
sphinx-last-updated-by-git = "*"
sphinx-mdinclude = "*"

[tool.pytest.ini_options]
testpaths = ['tests/']

[[tool.mypy.overrides]]
module = ["qiskit_metal.*", "matplotlib.*", "pyEPR.*", "pyaedt.*", "scipy.*"]
ignore_missing_imports = true

[tool.mypy]
allow_redefinition = true
