[project]
name = "qdesignoptimizer"
version = "0.1.0"
description = "Optimizer for superconducting quantum chip designs"
authors = [
  { name = "202Q-lab" },
  { name = "Axel Eriksson" },
  { name = "Lukas Splitthoff" },
]
license = "Apache License 2.0"
readme = "README.md"
keywords = ["Quantum"]
classifiers = ["Programming Language :: Python :: 3"]
requires-python = ">=3.10,<3.13"
dependencies = [
 
  "gdstk>=0.9",
  "geopandas>=1.0",
  "matplotlib>=3.7.0",
  "numpy>=1.26.4,<2",
  "pandas>=2.1.1",
  "pint>=0.21.0",
  "pyEPR-quantum @ git+https://github.com/zlatko-minev/pyEPR.git@master",  # Using master branch with numpy 1.26 compatibility fix
  "pygments>=2.14.0", 
  "pyside6>=6.8",
  "qdarkstyle>=3.1",
  "qutip>=5.0.0",
  "scipy>=1.10.0",
  "shapely>=2.0.1",
  "scqubits>=4.1.0",
  "gmsh>=4.11.1",
  "pyaedt>=0.21,<0.24", # pyaedt 0.24 has some bugs (Jan 23, 2026)
  "pyyaml>=6.0", # Used for the Elmer runner. 
  "ipython>=8.10.0",
  "ipykernel",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.analysis]
optional = true

[tool.poetry.group.analysis.dependencies]
pylint = ">=2.16.0"
pylint-exit = "^1.2.0"
pytest = ">=7.2.2"
pytest-cov = ">=4.1.0"
mypy = "^1.7.1"
pandas-stubs = "*"
pre-commit = ">=4.0.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"
sphinx-copybutton = "*"
sphinx-last-updated-by-git = "*"
sphinx-mdinclude = "*"

[tool.pytest.ini_options]
testpaths = ['tests/']

[[tool.mypy.overrides]]
module = ["qiskit_metal.*", "matplotlib.*", "pyEPR.*", "pyaedt.*", "scipy.*"]
ignore_missing_imports = true

[tool.mypy]
allow_redefinition = true
